// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 1'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 2'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 3'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 4'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 5'] = `
"
      // Imports
      
      // Module
      require(\\"/path/to/one-app-bundler/webpack/ssr-css-loader/css-base.js\\")().push([module.i, \\".my-root__ErrorLayout__ErrorLayout___2B91F {
  margin: 0 auto;
}

.my-root__ErrorLayout__main___2IftH {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
  padding: 10px;
}\\", \\"\\"]);
      // Exports
      exports = module.exports = {
      	\\"ErrorLayout\\": \\"my-root__ErrorLayout__ErrorLayout___2B91F\\",
      	\\"main\\": \\"my-root__ErrorLayout__main___2IftH\\"
      };
      module.exports = exports;
    "
`;

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 6'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 7'] = '""';

exports['SSR CSS loader should remove css-loader\'s css-base, replace its push and export the locals 8'] = `
"
      // Imports
      
      // Module
      require(\\"/path/to/one-app-bundler/webpack/ssr-css-loader/css-base.js\\")().push([module.i, \\".my-root__ErrorLayout__ErrorLayout___2B91F {
  margin: 0 auto;
}

.my-root__ErrorLayout__main___2IftH {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
  padding: 10px;
}\\", \\"\\"]);
      // Exports
      exports = module.exports = {
      	\\"ErrorLayout\\": \\"my-root__ErrorLayout__ErrorLayout___2B91F\\",
      	\\"main\\": \\"my-root__ErrorLayout__main___2IftH\\"
      };
      module.exports = exports;
    "
`;

exports['SSR CSS loader should throw an error when the css-loader is not present 1'] = `
"could not find the css-loader in
no css-loader here!"
`;

exports['SSR CSS loader should throw an error when the css-loader is not present 2'] = `
"could not find the css-loader in
var ___CSS_LOADER_API_IMPORT___ = __webpack_require__(/*! css-loader/dist/runtime/api.js */ \\"css-loader/dist/runtime/api.js\\");
    exports = ___CSS_LOADER_API_IMPORT___();"
`;

exports['SSR CSS loader should throw an error when the css-loader is not present 3'] = `
"could not find the css-loader in
var ___CSS_LOADER_API_IMPORT___ = __webpack_require__(/*! ../../css-loader/dist/runtime/api.js */ \\"../../css-loader/dist/runtime/api.js\\");
    exports = ___CSS_LOADER_API_IMPORT___(true);"
`;

exports['SSR CSS loader should throw an error when the css-loader is not present 4'] = `
"could not find the css-loader in

    // Imports
    var ___CSS_LOADER_API_IMPORT___ = __webpack_require__(/*! ../../see-ess-ess-loader/lib/see-ess-ess-base.js */ \\"../../see-ess-ess-loader/lib/see-ess-ess-base.js\\");
    exports = ___CSS_LOADER_API_IMPORT___(undefined);
    // Module
    exports.push([module.i, \\".my-root__ErrorLayout__ErrorLayout___2B91F {
  margin: 0 auto;
}

.my-root__ErrorLayout__main___2IftH {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
  padding: 10px;
}\\", \\"\\"]);
    // Exports
    exports.locals = {
    	\\"ErrorLayout\\": \\"my-root__ErrorLayout__ErrorLayout___2B91F\\",
    	\\"main\\": \\"my-root__ErrorLayout__main___2IftH\\"
    };
    module.exports = exports;
    "
`;
